# kage

./: .gitignore  .mcp.json  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Context/: kage-brainstorm-session-may2026.md  kage-brainstorm-session-may24.md  kage-knowledge-base-update.md  kage-master-context.md  kage-mobile-brainstorm-may25.md  kage-research-findings-2026-06-08.md  kage-session-decisions_new _may_24.md  kage-session-handoff-2026-05-24.md
docs/: ROADMAP.md  agents-video-brief.md  architecture.md  arms-backlog.md  blueprint.md  competitor-flowcharts.md  cosmos-research-log.md  cycle-1-pitch.md  cycle-10-pitch.md  cycle-10-stateful-sessions.md  cycle-10.5-active-context.md  cycle-10.5-pitch.md  cycle-11-pitch.md  cycle-12-modularity.md  cycle-13-arms.md  cycle-14-scout-v1.1.md  cycle-14-scout.md  cycle-15-librarian.md  cycle-16-monitor.md  cycle-17-gap-fixes.md  cycle-18-router.md  cycle-19-sensitive-vault.md  cycle-2-brain-real-data.md  cycle-2-pitch.md  cycle-20-pitch.md  cycle-21-redact.md  cycle-22-layer6.md  cycle-23-gate-hardening.md  cycle-24-librarian-learning.md  cycle-25-librarian-ctm.md  cycle-26-calendar-write.md  cycle-27-two-pass-gate.md  cycle-28-identity-registry.md  cycle-28.1-hotfix.md  cycle-29-monitor-librarian.md  cycle-29.1-num-ctx-hotfix.md  cycle-3-hybrid-retrieval.md  cycle-3-pitch.md  cycle-30.1-cost-aware-routing.md  cycle-30.2-inbound-injection-guardrail.md  (+23 more)
docs/gaps/: gap-tracker.md
src/kage/: __init__.py  arms.py  budget.py  calendar_write.py  chunk.py  cli.py  cloud.py  config.py  context.py  embed.py  gate.py  guard.py  http.py  identity.py  learn.py  librarian.py  mcp_server.py  monitor.py  notes.py  observe.py  pii.py  privacy.py  redact.py  (+10 more)
tests/: eval_retrieval.py  fakes.py  test_budget.py  test_calendar_write.py  test_cli.py  test_context.py  test_gate.py  test_guard.py  test_learn.py  test_librarian.py  test_monitor.py  test_observe.py  test_pii.py  test_redact.py  test_router.py  test_scout.py  test_seams.py  test_sensitive.py  test_warm.py  test_warm_producers.py
(+18 files in other folders)
