[project]
name = "kage"
version = "0.6.0"
description = "Local-first personal context broker — your notes, surfaced into your cloud AI, on your machine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "mcp[cli]>=1.0",
    "typer>=0.12",
]

[project.scripts]
kage = "kage.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kage"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
]
