[project]
name = "kage"
version = "0.26.0"
description = "Local-first personal context broker — your notes, surfaced into your cloud AI, on your machine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "google-adk[extensions]>=2.3.0",
    "mcp[cli]>=1.0",
    "psutil>=5.9",
    "typer>=0.12",
    "pyobjc-framework-EventKit>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
kage = "kage.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kage"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
]
rerank = [
    "sentence-transformers>=3",
]

[tool.pytest.ini_options]
pythonpath = ["tests"]

[tool.pyright]
extraPaths = ["tests"]
